data/all_generated_tests/raw_wast_tests/loop_TypeMismatchinControlFlowInstructions_976.wast
;; 7. **Test 7: Incorrect Type Preservation upon Loop Restart**    - Description: Design a loop where the block type expects a certain type stack before restarting the loop, but a `br` instruction alters the stack in a way that conflicts with this expectation.    - Reasoning: This tests whether the implementation correctly preserves stack types during loop restarts, maintaining expected type invariants.

(assert_invalid
  (module (func $incorrect-type-preservation-upon-loop-restart
    (block (i32.const 1)
      (loop (param i32) (nop) (i32.const 2) (br 1))
    )
  ))
  "type mismatch"
)